force-app/main/default/objects/EFT_File__c/EFT_File__c.object-meta.xml
<CustomObject>
    <description>Stores information about generated EFT Files that are sent to the bank.</description>
    <label>EFT File</label>
    <nameField>
        <displayFormat>EFT-{0000}</displayFormat>
        <label>EFTFile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EFT Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>