force-app/main/default/objects/EFT_File__c/fields/File_Number__c.field-meta.xml
<CustomField>
    <fullName>File_Number__c</fullName>
    <formula>RIGHT(Name, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Number</label>
    <type>Text</type>
</CustomField>