force-app/main/default/objects/EFT_File__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>