force-app/main/default/objects/EFT_File__c/fields/Transaction_Count__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Count__c</fullName>
    <label>Transaction Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>